set(LIB_POINTCLOUD3D pointcloud3d)

add_library(${LIB_POINTCLOUD3D} SHARED
	csvCreatePoint3D.cpp
	CsvMeasure3D.cpp
)

install(TARGETS ${LIB_POINTCLOUD3D}
        EXPORT PROJECTTargets
        COMPONENT bin
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
