set(LIB_SPNG spng)

add_library(${LIB_SPNG} SHARED
	spng.c
	spng.h
)

install(TARGETS ${LIB_SPNG}
        EXPORT PROJECTTargets
        COMPONENT bin
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)